# cmake-examples

./: .gitignore  README.md
cmake-example/: .gitignore  CMakeLists.txt  README.md  build_mingw.bat  build_msvc.bat  clean.bat  main.cpp
cmake-example-with-libs/: .gitignore  CMakeLists.txt  README.md  build_mingw.bat  clean.bat  main.cpp
